PSI Search Bug fix